--- a/_posts/2019-03-17-titanic.md
+++ b/_posts/2019-03-17-titanic.md
@@ -491,7 +491,9 @@ df.groupby(pd.qcut(df['Age'],10))['Survived'].mean().plot(figsize=(8,6), kind='b
 
 
 
-
+<figure>
+	<a href="/assets/images/titanic/output_13_1.png"><img src="/assets/images/titanic/output_13_1.png"></a>
+</figure>
 ![png](output_13_1.png)
 
 
