--- a/_posts/2019-03-17-titanic.md
+++ b/_posts/2019-03-17-titanic.md
@@ -494,7 +494,7 @@ df.groupby(pd.qcut(df['Age'],10))['Survived'].mean().plot(figsize=(8,6), kind='b
 <figure>
 	<a href="/assets/images/titanic/output_13_1.png"><img src="/assets/images/titanic/output_13_1.png"></a>
 </figure>
-![png](output_13_1.png)
+
 
 
 ## Explore P Class
@@ -716,8 +716,10 @@ df.groupby('Pclass')['Survived'].mean().plot(kind='bar',width=0.8)
 
 
 
+<figure>
+	<a href="/assets/images/titanic/output_21_1.png"><img src="/assets/images/titanic/output_21_1.png"></a>
+</figure>
 
-![png](output_21_1.png)
 
 
 ## Explore Embarked Location
@@ -829,9 +831,10 @@ df.groupby('Embarked')['Survived'].mean().plot(kind='bar',width=0.8)
     <matplotlib.axes._subplots.AxesSubplot at 0x250be04c828>
 
 
+<figure>
+	<a href="/assets/images/titanic/output_27_1.png"><img src="/assets/images/titanic/output_27_1.png"></a>
+</figure>
 
-
-![png](output_27_1.png)
 
 
 # Feature Engineering
