--- a/_posts/2019-02-16-Titanic.md
+++ b/_posts/2019-02-16-Titanic.md
@@ -3,7 +3,7 @@ date: 2019-02-16T11:25:00-01:00
 title: "How to Survive the Titanic"
 excerpt: "On April 10th, 1912, the RMS *Titanic* departed on its maiden voyage from Southampton to New York City. After making stops in Cherbourg and Queenstown to pick up additional passengers, the ship headed towards New York."
 description: "Titanic Data Analysis"
-teaser_image_path: /assets/images/color_graph_small.jpg
+teaser_image_path: /assets/images/thumbnails/titanic.png
 # category:
 tags: ["Python", "Machine Learning", "Random Forest"]
 classes: wide
